--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Teko');
 
+//desktop
 .title {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 30px;
     font-family: 'Teko', sans-serif;
     font-size: 80px;
     font-weight: 600;
@@ -68,18 +69,13 @@ label:active:after {
 }
 
 
-
-
-
-
 #elements-wrap {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;;
+    align-items: center;
+    margin-top: -10px;
 }
-
-
 
 #pad-wrapper {
     position: absolute;
@@ -92,6 +88,11 @@ label:active:after {
     grid-template-columns: 100px 100px 100px 100px;
     grid-template-rows: 100px 100px 100px 100px;
     grid-gap: 18px;
+}
+
+.mpd-small {
+    display: none;
+    visibility: hidden;
 }
 
 .drum-pad {
@@ -136,55 +137,80 @@ label:active:after {
     justify-content: center;
     font-family: 'Teko', sans-serif;
     font-size: 20px;
+    margin-top: -15px;
     letter-spacing: 2px;
+}
+
+.footer {
+    font-family: 'Teko', sans-serif;
+    width: 100%;
+    position: fixed;
+    left:0;
+    bottom: 0;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 
 
-@media only screen  and (max-device-width: 500px) {
+//portarit mobile
+@media only screen and  (min-width: 320px) and (max-device-width: 480px) {
 
+    #elements-wrap {
+        margin-top: 0;
+    }
 
-
-    .mpd-image {
-        width: 400px;
-
+    .mpd-large {
+        display: none;
+        visibility: hidden;
+    }
+    
+    #mpd-small{
+        display: flex;
+        justify-content: center;
+        visibility: visible;
+        box-shadow: 0px 0px 8px black;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #pad-wrapper {
         position: absolute;
-        margin-top: -125px;
-        margin-left: 135px;
+        margin-left: 9%;
+        margin-top: -41.5%;
     }
     
     .pad-wrapper {
-
         display: grid;
-        grid-template-columns: 60px 60px 60px 60px;
-        grid-template-rows: 60px 60px 60px 60px;
-        grid-gap: 3px;
+        grid-template-columns: 17vw 17vw 17vw 17vw;
+        grid-template-rows: 17vw 17vw 17vw 17vw;
+        grid-gap: 4.8vw;
     }
     
-
-
     .drum-pad {
         display: block;
         text-align: center;
-        height: 50px;
-        width: 50px;
-
+        height: 100%;
+        width: 100%;
     }
     
     
     #padLetter {
         opacity: 0;
         visibility: hidden;
+        display: none;
     }
     
     .padID {
         font-size: 10px;
         color: white;
-        margin-top: -50px;
         font-size: 8px;
+        margin-top: 12px;
+    }
+
+    .display {
+        margin-top: 20px;
     }
 
 }
